# demo

./: .env  .gitignore  Cargo.toml  Info.plist  Package.swift  README.md  build.rs
.github/workflows/: build.yml
Sources/DawellService/: ActivityTracker.swift  ApiClient.swift  Config.swift  InputLogger.swift  ScreenCapture.swift  ScreenshotModule.swift  ServiceInstall.swift  StreamingClient.swift  SystemInfo.swift  VideoRecorder.swift  WebSocketClient.swift  main.swift
src/: activity_tracker.rs  api_client.rs  capture_settings.rs  config.rs  cursor_overlay.rs  input_logger.rs  main.rs  monitoring_settings.rs  remote_control.rs  screen_capture.rs  screenshot_capture.rs  screenshot_module.rs  service_install.rs  streaming_client.rs  system_info.rs  video_recorder.rs  ws_client.rs
